Remove link text-decoration, apply div classes to link and remove div to fix next video alignment. Include styling to fix searchbar position.

--- a/Sprint 2/src/components/NextVideo/NextVideo.scss
+++ b/Sprint 2/src/components/NextVideo/NextVideo.scss
@@ -5,6 +5,7 @@
     @include flex-control(flex, initial, initial, initial, flex-start, initial);
     margin: 2.4rem 0 0;
     width: 28.8rem;
+    text-decoration: none;
 
     .card {
 
